--- a/Preprocessing/preprocessing.ipynb
+++ b/Preprocessing/preprocessing.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "491ec10e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "20886f2e",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "6e11b637",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "55d5f331",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "ed1a5efd",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "1ebe6693",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "947748bd",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "64c91a3a",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,8 +282,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "ea3a7822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('Patient_ID', axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e0529885",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Age Family_History Race_African_Ancestry  PSA_Level DRE_Result  \\\n",
+      "0   78             No                   Yes       5.07     Normal   \n",
+      "1   68             No                   Yes      10.24     Normal   \n",
+      "2   54             No                    No      13.79     Normal   \n",
+      "3   82             No                    No       8.03   Abnormal   \n",
+      "4   47            Yes                    No       1.89     Normal   \n",
+      "\n",
+      "  Biopsy_Result Difficulty_Urinating Weak_Urine_Flow Blood_in_Urine  \\\n",
+      "0        Benign                   No              No             No   \n",
+      "1        Benign                  Yes              No             No   \n",
+      "2        Benign                   No              No             No   \n",
+      "3        Benign                   No              No             No   \n",
+      "4     Malignant                  Yes             Yes             No   \n",
+      "\n",
+      "  Pelvic_Pain  ... Alcohol_Consumption Hypertension Diabetes  \\\n",
+      "0          No  ...            Moderate           No       No   \n",
+      "1         Yes  ...                 Low           No       No   \n",
+      "2         Yes  ...                 Low           No       No   \n",
+      "3          No  ...                 Low           No       No   \n",
+      "4          No  ...            Moderate          Yes       No   \n",
+      "\n",
+      "  Cholesterol_Level Screening_Age Follow_Up_Required Prostate_Volume  \\\n",
+      "0            Normal            45                 No            46.0   \n",
+      "1              High            65                 No            78.2   \n",
+      "2            Normal            61                 No            21.1   \n",
+      "3            Normal            47                Yes            79.9   \n",
+      "4            Normal            72                 No            32.0   \n",
+      "\n",
+      "   Genetic_Risk_Factors Previous_Cancer_History Early_Detection  \n",
+      "0                    No                      No             Yes  \n",
+      "1                    No                      No             Yes  \n",
+      "2                    No                      No             Yes  \n",
+      "3                    No                     Yes             Yes  \n",
+      "4                    No                      No             Yes  \n",
+      "\n",
+      "[5 rows x 29 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "63802ed2",
+   "id": "38cd2f16",
    "metadata": {},
    "outputs": [],
    "source": []
